[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glowing-pancake"
version = "0.0.1"
authors = [ { name="Gage Geigle", email="gage@gagegeigle.com" } ]
description = "A simple logger for your python projects."
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.github.com/geigle/glowing-pancake"
"Bug Tracker" = "https://github.com/geigle/glowing-pancake/issues"